# bloom

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md
.githooks/: pre-push
.github/workflows/: ci.yml
docs/: THEORY.md
src/: engine.rs  lib.rs  spatial.rs  test_utils.rs
src/graph/: algorithms.rs  mod.rs  spatial.rs  types.rs
src/layout/: barnes_hut.rs  force.rs  mod.rs
src/protocol/: decode.rs  format.rs  mod.rs
src/render/: camera.rs  mod.rs
